WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72596
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings()
https://bugs.webkit.org/show_bug.cgi?id=72596
Summary
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings()
Simon Hausmann
Reported
2011-11-17 03:59:52 PST
This is trivial to remove, the callers already check WebCore::Settings
Attachments
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings()
(3.91 KB, patch)
2011-11-17 04:26 PST
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings()
(3.94 KB, patch)
2011-11-17 04:34 PST
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2011-11-17 04:26:37 PST
Created
attachment 115560
[details]
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings()
WebKit Review Bot
Comment 2
2011-11-17 04:29:37 PST
Attachment 115560
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Last 3072 characters of output: M Source/WebKit2/UIProcess/API/qt/qwebdownloaditem_p.h M Source/WebKit2/UIProcess/API/qt/qquickwebview_p.h A Source/WebKit2/UIProcess/API/qt/qquickwebpage_p_p.h M Source/WebKit2/UIProcess/API/qt/qquickwebpage_p.h M Tools/qmake/mkspecs/features/default_post.prf M Tools/qmake/mkspecs/features/default_pre.prf M Tools/qmake/mkspecs/features/qtwebkit.prf A Tools/qmake/mkspecs/features/qtwebkit-private.prf M Tools/WebKitTestRunner/qt/PlatformWebViewQt.cpp M Tools/ChangeLog M Tools/MiniBrowser/qt/BrowserWindow.h M Tools/MiniBrowser/qt/UrlLoader.cpp M Tools/MiniBrowser/qt/BrowserWindow.cpp W: -empty_dir: trunk/Source/WebKit/qt/declarative/private W: -empty_dir: trunk/Source/WebKit2/UIProcess/API/qt/qquickwebpage.h W: -empty_dir: trunk/Source/WebKit2/UIProcess/API/qt/qquickwebview.h W: -empty_dir: trunk/Source/WebKit2/UIProcess/API/qt/qquickwebviewprivateextension.cpp W: -empty_dir: trunk/Source/WebKit2/UIProcess/API/qt/qquickwebviewprivateextension_p.h W: -empty_dir: trunk/Source/WebKit2/UIProcess/API/qt/qwebdownloaditem.h W: -empty_dir: trunk/Source/WebKit2/UIProcess/API/qt/qwebpreferences.h
r100603
= 5b10400dce635df634c34ef2967dba3a593ef12f (refs/remotes/origin/master) First, rewinding head to replay your work on top of it... Applying: [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that Using index info to reconstruct a base tree... <stdin>:222: new blank line at EOF. + warning: 1 line adds whitespace errors. Falling back to patching base and 3-way merge... warning: too many files (created: 165678 deleted: 9), skipping inexact rename detection CONFLICT (rename/delete): Rename Source/WebKit/qt/declarative/private/plugin.cpp->Source/WebKit2/UIProcess/API/qt/qwebdownloaditem_p_p.h in [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that and deleted in HEAD CONFLICT (rename/delete): Rename Source/WebKit/qt/declarative/private/private.pro->Source/WebKit/qt/declarative/public.pri in [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that and deleted in HEAD CONFLICT (rename/delete): Rename Source/WebKit2/UIProcess/API/qt/qquickwebviewprivateextension_p.h->Source/WebKit2/UIProcess/API/qt/qquickwebpage_p_p.h in [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that and deleted in HEAD Auto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Auto-merging Source/WebKit2/UIProcess/API/qt/tests/qmltests/qmltests.pro Auto-merging Source/WebKit2/UIProcess/API/qt/tests/qmltests/tst_qmltests.cpp Failed to merge in the changes. Patch failed at 0001 [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 157. If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Hausmann
Comment 3
2011-11-17 04:34:17 PST
Created
attachment 115562
[details]
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings()
Simon Hausmann
Comment 4
2011-11-17 06:24:00 PST
Comment on
attachment 115562
[details]
[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings() Clearing flags on attachment: 115562 Committed
r100614
: <
http://trac.webkit.org/changeset/100614
>
Simon Hausmann
Comment 5
2011-11-17 06:24:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug