[Qt] Layer violation: WebCore::dnsPrefetch uses QWebSettings::globalSettings() https://bugs.webkit.org/show_bug.cgi?id=72596

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

We don't need to use QWebSettings here, because we now propagate the DNS prefetch
setting to WebCore::Settings and the rest of WebCore checks the setting before calling
WebCore::prefetchDNS.

* platform/network/qt/DnsPrefetchHelper.cpp:
(WebCore::prefetchDNS): Removed the use of QWebSettings.
* platform/network/qt/DnsPrefetchHelper.h: Remove offending qwebsettings.h inclusion.

Source/WebKit/qt:

* Api/qwebsettings.cpp:
(QWebSettingsPrivate::apply): Propagate the DNS prefetch setting to WebCore::Settings.

Canonical link: https://commits.webkit.org/89120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100614 268f45cc-cd09-0410-ab3c-d52691b4dbfc