Source/WebCore/platform/network/qt/DnsPrefetchHelper.cpp
@@ -26,10 +26,8 @@ namespace WebCore {
 // this is called on mouse over a href and on page loading
 void prefetchDNS(const String& hostname)
 {
-    if (QWebSettings::globalSettings()->testAttribute(QWebSettings::DnsPrefetchEnabled)) {
-        static DnsPrefetchHelper dnsPrefetchHelper;
-        dnsPrefetchHelper.lookup(QString(hostname));
-    }
+    static DnsPrefetchHelper dnsPrefetchHelper;
+    dnsPrefetchHelper.lookup(QString(hostname));
 }
 
 }
